--- a/index.html
+++ b/index.html
@@ -260,6 +260,7 @@ l-18 -22 -499 0 c-274 0 -502 3 -508 7 -12 7 -13 853 -1 865 15 15 118 18 551
       <div class="chart-zone__bottom">
         <img class="chart-zone__histogramm" src="images/table.svg" alt="histogramm">
       </div>
+      <img src="images/horse.png" alt="yes or no" class="chart-zone__mobile-horse">
 
     </div>
 
