--- a/index.html
+++ b/index.html
@@ -401,9 +401,11 @@ l59 62 266 0 265 0 31 36 32 35 -3 434 -3 434 -29 30 -30 31 -745 -1 c-410 0
         </div>
       </div>
       <div class="chart-zone__bottom">
+
         <img class="chart-zone__histogramm" src="images/table.svg" alt="histogramm">
       </div>
-      <img src="images/horse.png" alt="yes or no" class="chart-zone__mobile-horse">
+      <img src="images/horse.svg" alt="yes or no" class="chart-zone__mobile-horse">
+
 
     </div>
   </article>
